--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,4 +14,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: rm-test
-      run: mkdir runs && cd src/rm && make rm_test && chmod +x rm_test && ./rm_test
+      run: |
+        mkdir runs
+        cd src/rm
+        make rm_test
+        chmod +x rm_test
+        ./rm_test
+        cd ../..
+        rm -rf runs
