--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ main: main.cpp
 	cd sm && make
 	cd ql && make
 	$(CC) -c main.cpp $(STD11) $(OPT)
-	$(CC) main.o pf/pf.o rm/rm_manager.o rm/rm_filehandle.o rm/rm_filescan.o ix/ix_manager.o ix/ix_indexhandle.o sm/sm_manager.o ql/sqlparser.o -o main $(STD11) $(OPT)
+	$(CC) main.o pf/pf.o rm/rm_manager.o rm/rm_filehandle.o rm/rm_filescan.o ix/ix_manager.o ix/ix_indexhandle.o sm/sm_manager.o ql/sqlparser.o ql/ql.o -o main $(STD11) $(OPT)
 
 clean:
 	rm main
